--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.mail.host=
-spring.mail.port=
+spring.mail.host= mail
+spring.mail.port= port
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
@@ -28,8 +28,8 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.data.elasticsearch.cluster-nodes=localhost:9200
 spring.data.elasticsearch.cluster-name=elasticsearch
 spring.mvc.hiddenmethod.filter.enabled=true
-spring.security.oauth2.client.registration.google.client-id=
-spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.client-id= id
+spring.security.oauth2.client.registration.google.client-secret= key
 spring.security.oauth2.client.registration.google.scope=profile,email
 spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
@@ -37,7 +37,7 @@ spring.security.oauth2.client.registration.google.client-name=Google
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
-spring.security.oauth2.client.registration.facebook.client-id=
+spring.security.oauth2.client.registration.facebook.client-id=idd key
 spring.security.oauth2.client.registration.facebook.client-secret=
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/facebook
 spring.security.oauth2.client.registration.facebook.scope=email,public_profile
